# PurfelctlySafe

./: CMakeLists.txt
src/: main.cpp
src/core/: animation.hpp  context.hpp  input_handler.hpp  utils.hpp
src/core/command/: command.hpp  command_queue.hpp
src/core/debug/: fps_counter.hpp
src/core/entity/: animated_game_object.hpp  game_object.hpp  sprite_game_object.hpp
src/core/resources/: resource_holder.hpp
src/core/states/: state.hpp  state_stack.hpp
src/game/: application.hpp  category.hpp  game.hpp  input_handler.hpp  resource_definitions.hpp  states.hpp  world.hpp
src/game/characters/: cat.hpp  cat_2.hpp  cat_commands.hpp  cat_states.hpp
src/game/states/: game_state.hpp  loading_state.hpp  menu_state.hpp  pause_state.hpp  title_state.hpp
